components/atom/switch/src/styles/index.scss
@use 'sass:math';

$base-class: '.sui-AtomSwitch';

#{$base-class} {
  $self: &;

  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;

  cursor: pointer;
  display: inline-block;
  outline: none;
  user-select: none;

  &-container {
    align-items: center;
    box-shadow: none;
    display: flex;
    height: $h-atom-switch-container-default;
    justify-content: center;

    &--fullWidth {
      justify-content: space-between;
    }

    &:not(#{$base-class}-container--isFitted) {
      padding: $p-atom-switch-container;
    }
  }

  .sui-AtomLabel {
    margin-bottom: 0;
  }

  &-toggleType {
    .sui-AtomLabel {
      margin-bottom: $m-l;
    }
  }

  &-singleType {
    .sui-AtomLabel {
      margin-right: $m-l;
    }
    #{$base-class}-inputContainer + .sui-AtomLabel {
      margin-left: $m-l;
    }
  }

  &-text {
    display: flex;
    flex-direction: column;
    font-size: $fz-m;
    justify-content: center;

    &#{$base-class}-right {
      padding-left: $p-m;
    }

    &#{$base-class}-left {
      padding-right: $p-m;
    }

    &[aria-disabled='true'] {
      color: $c-gray;
      cursor: not-allowed;
    }
  }

  &-inputContainer {
    background-color: $c-atom-switch--default;
    border: $bd-atom-switch-default;
    border-radius: $w-atom-switch-default * 0.5;
    box-sizing: border-box;
    cursor: pointer;
    height: $h-atom-switch-default;
    min-width: $w-atom-switch-default;
    outline: none;
    padding: 0;
    position: relative;
    transition: margin-left $atom-switch-transition-time ease-in-out;
    width: $w-atom-switch-default;

    &:focus {
      #{$base-class}-circle {
        border: $bdw-s solid $c-atom-switch-circle;
        box-shadow: none;
      }
    }
    &[aria-checked='true']:focus-visible,
    &:focus-visible {
      #{$base-class}-circle {
        border: none;
        box-shadow: 0 0 2px 2px color-variation($c-primary, 1);
      }
    }

    &:disabled {
      background-color: $c-gray-lightest;
      border: $bdw-s solid $c-gray-lightest;
      cursor: not-allowed;
      #{$base-class}-circle {
        background-color: $c-gray-lightest;
      }
    }
    &[aria-checked='true'] {
      background-color: $c-atom-switch--active;
      border: $bdw-s solid $c-atom-switch--active;
      cursor: pointer;
      &:disabled {
        cursor: not-allowed;
      }

      #{$base-class}-icon-left {
        color: $c-atom-switch--active;
      }

      #{$base-class}-icon-right {
        color: transparent;
      }

      #{$base-class}-circle {
        box-shadow: 2px 0 2px 0 $c-atom-switch--active-shadow;
      }
    }

    #{$base-class}-circle {
      box-sizing: border-box;
      background-color: $c-atom-switch-circle;
      border-radius: ($h-atom-switch-default - 2) * 0.5;
      border: $bdw-s solid $c-atom-switch-circle;
      box-shadow: 2px 0 2px 0 $c-gray-light;
      height: $h-atom-switch-default - 2px;
      width: $w-atom-switch-circle-default - 2px;
      transition: margin-left $atom-switch-transition-time ease-in-out;
      margin: 0px;
      display: block;
    }

    #{$base-class}-icon-right,
    #{$base-class}-icon-left {
      position: absolute;
      box-sizing: border-box;
      font-size: 1rem;
      top: 0;
      bottom: 0;
      vertical-align: middle;
      display: inline-flex;
      align-items: center;
      width: $w-atom-switch-circle-default - 2px;
      height: $w-atom-switch-circle-default - 2px;
      justify-content: center;
      margin: 0;
      overflow: hidden;
    }
    #{$base-class}-icon-right {
      right: 0;
      transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
      color: transparent;
    }
    #{$base-class}-icon-left {
      left: 0;
      transition: color $atom-switch-transition-time ease-in-out
        $atom-switch-transition-time;
      color: $bd-atom-switch-default;
    }

    &--right {
      &[aria-checked='true'] {
        #{$base-class}-icon-left {
          color: transparent;
        }

        #{$base-class}-icon-right {
          color: $c-atom-switch--active;
        }
      }
      #{$base-class}-circle {
        box-shadow: -2px 0 2px 0 $c-atom-switch--active-shadow;
        margin-left: $m-atom-switch-circle-default--active;
      }
      #{$base-class}-icon-right {
        transition: color $atom-switch-transition-time ease-in-out
          $atom-switch-transition-time;
      }
      #{$base-class}-icon-left {
        transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
      }
    }
  }

  &--size {
    &-small {
      #{$base-class}-container {
        height: $h-atom-switch-container-small;
        padding-bottom: $p-s;
        padding-top: $p-s;

        #{$base-class}-inputContainer {
          height: $h-atom-switch-input-container-small;
          min-width: $w-atom-switch-small;
          width: $w-atom-switch-small;

          #{$base-class}-circle {
            border-radius: $w-atom-switch-small * 0.5;
            height: $h-atom-switch-input-container-small - 2px;
            width: $h-atom-switch-input-container-small - 2px;
          }
          &--right {
            #{$base-class}-circle {
              margin-left: $m-atom-switch-circle-small--active;
            }
          }
          #{$base-class}-icon-right,
          #{$base-class}-icon-left {
            font-size: math.div(2, 3) * 1rem;
            width: $h-atom-switch-input-container-small - 2px;
            height: $h-atom-switch-input-container-small - 2px;
          }
        }
      }
    }
    &-large {
      #{$base-class}-container {
        height: $h-atom-switch-container-large;
        padding-bottom: $p-s;
        padding-top: $p-s;

        #{$base-class}-inputContainer {
          height: $h-atom-switch-input-container-large;
          min-width: $w-atom-switch-large;
          width: $w-atom-switch-large;

          #{$base-class}-circle {
            border-radius: $w-atom-switch-large * 0.5;
            height: $h-atom-switch-input-container-large - 2px;
            width: $h-atom-switch-input-container-large - 2px;
          }
          &--right {
            #{$base-class}-circle {
              margin-left: $m-atom-switch-circle-large--active;
            }
          }
          #{$base-class}-icon-right,
          #{$base-class}-icon-left {
            font-size: math.div(3, 2) * 1rem;
            width: $h-atom-switch-input-container-large - 2px;
            height: $h-atom-switch-input-container-large - 2px;
          }
        }
      }
    }
  }

  &--fullWidth {
    width: 100%;
  }
}

